--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ p {
   margin: 0;
 }
 
-.token-total {
+.chipCount {
   font-family: 'Casino Queen Normal';
   text-shadow: rgba(255,255,255,0.5) 0px 3px 3px;
   font-size: 55pt;
